--- a/ExpenseTrackerWeb/Views/_ViewImports.cshtml
+++ b/ExpenseTrackerWeb/Views/_ViewImports.cshtml
@@ -1,3 +1,3 @@
 ﻿@using ExpenseTrackerWeb
-@namespace ExpenseTrackerWeb.Pages
+@using ExpenseTrackerWeb.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
