--- a/ExpenseTrackerWeb/Views/Home/Index.cshtml
+++ b/ExpenseTrackerWeb/Views/Home/Index.cshtml
@@ -1,8 +1,21 @@
 ﻿@{
     ViewData["Title"] = "Home Page";
 }
-
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+<h2>Personal Expense Manager</h2>
+<br />
+<div>
+    <div style="float:left">
+        <button class="btn btn-primary" onclick="AddEditExpenses(0)">Add Expense</button>
+        <button class="btn btn-success" onclick="ReportExpense()">Expense Report</button>
+    </div>
+    <div style="float:right; width:40%;">
+        <form asp-controller="Expense" asp-action="Index" class="form-group">
+            <div class="col-sm-6">
+                <input class="form-control" type="text" name="SearchString" placeholder="Search">
+            </div>
+            <button type="submit" class="btn btn-default btn-info">Filter</button>
+        </form>
+    </div>
 </div>
+<br />
+<br />
