--- a/ExpenseTrackerWeb/Views/ExpensesReport/Create.cshtml
+++ b/ExpenseTrackerWeb/Views/ExpensesReport/Create.cshtml
@@ -1,12 +1,12 @@
 ﻿@model ExpenseTrackerWeb.Models.ExpenseReport
 
 @{
-    ViewData["Title"] = "Create";
+    ViewData["Title"] = "Add Expense";
 }
 
-<h1>Create</h1>
+<h2>Add an Expense Entry</h2>
 
-<h4>ExpenseReport</h4>
+<h4></h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
