--- a/ExpenseTrackerWeb/Views/ExpensesReport/Index.cshtml
+++ b/ExpenseTrackerWeb/Views/ExpensesReport/Index.cshtml
@@ -1,13 +1,13 @@
 ﻿@model IEnumerable<ExpenseTrackerWeb.Models.ExpenseReport>
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Expenses";
 }
 
-<h1>Index</h1>
+<h1>Expenses</h1>
 
 <p>
-    <a asp-action="Create">Create New</a>
+    <a asp-action="Create">Add a Expense Entry</a>
 </p>
 <table class="table">
     <thead>
