--- a/ExpenseTrackerWeb/Views/ExpensesReport/Create.cshtml
+++ b/ExpenseTrackerWeb/Views/ExpensesReport/Create.cshtml
@@ -14,26 +14,26 @@
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="ItemName" class="control-label"></label>
-                <input asp-for="ItemName" class="form-control" />
+                <input asp-for="ItemName" class="form-control" id="ItemName" />
                 <span asp-validation-for="ItemName" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Amount" class="control-label"></label>
-                <input asp-for="Amount" class="form-control" />
+                <input asp-for="Amount" class="form-control" id="Amount" />
                 <span asp-validation-for="Amount" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="ExpenseDate" class="control-label"></label>
-                <input asp-for="ExpenseDate" class="form-control" />
+                <input asp-for="ExpenseDate" class="form-control" id="ExpenseDate" />
                 <span asp-validation-for="ExpenseDate" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Category" class="control-label"></label>
-                <input asp-for="Category" class="form-control" />
+                <input asp-for="Category" class="form-control" id="Category" />
                 <span asp-validation-for="Category" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+                <input type="submit" value="Create" class="btn btn-primary" id="Create"/>
             </div>
         </form>
     </div>
