--- a/ExpenseTrackerWeb/Views/ExpensesReport/Index.cshtml
+++ b/ExpenseTrackerWeb/Views/ExpensesReport/Index.cshtml
@@ -9,6 +9,11 @@
 <p>
     <a asp-action="Create">Add a Expense Entry</a>
 </p>
+
+<p>
+
+    <a asp-action="Charts">Expense Charts</a>
+</p>
 <table class="table" >
     <thead>
         <tr>
