home page link changed, charts code

--- a/ExpenseTrackerWeb/Views/ExpensesReport/charts.cshtml
+++ b/ExpenseTrackerWeb/Views/ExpensesReport/charts.cshtml
@@ -9,10 +9,10 @@
 
 <figure class="highcharts-figure">
     <div id="container"></div>
-    <script src="~/js/Charts.js"></script>
+
     <p class="highcharts-description">
-        Pie charts are very popular for showing a compact overview of a
-        composition or comparison. While they can be harder to read than
-        column charts, they remain a popular choice for small datasets.
+        Your Daily expenses are shown here in a Pie Chart divided by different categories of your expenses.
+
     </p>
 </figure>
+<script src="~/js/Charts.js"></script>
